Removendo installs depreciados.